updated admin page

--- a/extensions/shipped/assets/admin-styles.css
+++ b/extensions/shipped/assets/admin-styles.css
@@ -247,7 +247,7 @@
     background-color: #eaeaea;
 }
 
-#zcws_get_premium span {
+#wtars_get_premium span {
     font-weight: 600;
     color: red;
 }
